--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,12 @@
 */
 {
   "files": [],
-  "references": []
+  "references": [
+    {
+      "path": "./projects/ngx-mat-range-slider/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/ngx-mat-range-slider/tsconfig.spec.json"
+    }
+]
 }
