--- a/projects/ngx-mat-range-slider/package.json
+++ b/projects/ngx-mat-range-slider/package.json
@@ -4,11 +4,11 @@
   "version": "0.1.0",
   "peerDependencies": {
     "@angular/common": "^10.0.6",
-    "@angular/core": "^10.0.6"
-  },
-  "dependencies": {
-    "tslib": "^2.0.0",
+    "@angular/core": "^10.0.6",
     "@angular/cdk": "^10.1.0",
     "@angular/material": "^10.1.0"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
